# RandomizedAlgorithms2023

./: .gitignore  README.md
Project 2/: CMakeLists.txt  main.cpp
Project 2/Builds/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  main
Project 2/Builds/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  main
Project 2/Data/: Exercise_5.txt  Exercise_7.txt  Exercise_8.txt  Exercise_9.txt
Project 2/Data/Exercise_5/: Exercise_5_0.txt  Exercise_5_1001.txt  Exercise_5_1012.txt  Exercise_5_1023.txt  Exercise_5_1034.txt  Exercise_5_1045.txt  Exercise_5_1056.txt  Exercise_5_1067.txt  Exercise_5_1078.txt  Exercise_5_1089.txt  Exercise_5_11.txt  Exercise_5_110.txt  Exercise_5_121.txt  Exercise_5_132.txt  Exercise_5_143.txt  Exercise_5_154.txt  Exercise_5_165.txt  Exercise_5_176.txt  Exercise_5_187.txt  Exercise_5_198.txt  Exercise_5_209.txt  Exercise_5_22.txt  Exercise_5_220.txt  Exercise_5_231.txt  Exercise_5_242.txt  Exercise_5_253.txt  Exercise_5_264.txt  Exercise_5_275.txt  Exercise_5_286.txt  Exercise_5_297.txt  Exercise_5_308.txt  Exercise_5_319.txt  Exercise_5_33.txt  Exercise_5_330.txt  Exercise_5_341.txt  Exercise_5_352.txt  Exercise_5_363.txt  Exercise_5_374.txt  Exercise_5_385.txt  Exercise_5_396.txt  (+60 more)
Project 2/Data/Exercise_7/: Exercise_7_seed_0.txt  Exercise_7_seed_1001.txt  Exercise_7_seed_1012.txt  Exercise_7_seed_1023.txt  Exercise_7_seed_1034.txt  Exercise_7_seed_1045.txt  Exercise_7_seed_1056.txt  Exercise_7_seed_1067.txt  Exercise_7_seed_1078.txt  Exercise_7_seed_1089.txt  Exercise_7_seed_11.txt  Exercise_7_seed_110.txt  Exercise_7_seed_121.txt  Exercise_7_seed_132.txt  Exercise_7_seed_143.txt  Exercise_7_seed_154.txt  Exercise_7_seed_165.txt  Exercise_7_seed_176.txt  Exercise_7_seed_187.txt  Exercise_7_seed_198.txt  Exercise_7_seed_209.txt  Exercise_7_seed_22.txt  Exercise_7_seed_220.txt  Exercise_7_seed_231.txt  Exercise_7_seed_242.txt  Exercise_7_seed_253.txt  Exercise_7_seed_264.txt  Exercise_7_seed_275.txt  Exercise_7_seed_286.txt  Exercise_7_seed_297.txt  Exercise_7_seed_308.txt  Exercise_7_seed_319.txt  Exercise_7_seed_33.txt  Exercise_7_seed_330.txt  Exercise_7_seed_341.txt  Exercise_7_seed_352.txt  Exercise_7_seed_363.txt  Exercise_7_seed_374.txt  Exercise_7_seed_385.txt  Exercise_7_seed_396.txt  (+60 more)
Project 2/Data/Exercise_8/: Exercise_8_seed_0.txt  Exercise_8_seed_1001.txt  Exercise_8_seed_1012.txt  Exercise_8_seed_1023.txt  Exercise_8_seed_1034.txt  Exercise_8_seed_1045.txt  Exercise_8_seed_1056.txt  Exercise_8_seed_1067.txt  Exercise_8_seed_1078.txt  Exercise_8_seed_1089.txt  Exercise_8_seed_11.txt  Exercise_8_seed_110.txt  Exercise_8_seed_121.txt  Exercise_8_seed_132.txt  Exercise_8_seed_143.txt  Exercise_8_seed_154.txt  Exercise_8_seed_165.txt  Exercise_8_seed_176.txt  Exercise_8_seed_187.txt  Exercise_8_seed_198.txt  Exercise_8_seed_209.txt  Exercise_8_seed_22.txt  Exercise_8_seed_220.txt  Exercise_8_seed_231.txt  Exercise_8_seed_242.txt  Exercise_8_seed_264.txt  Exercise_8_seed_275.txt  Exercise_8_seed_297.txt  Exercise_8_seed_319.txt  Exercise_8_seed_33.txt  Exercise_8_seed_330.txt  Exercise_8_seed_363.txt  Exercise_8_seed_385.txt  Exercise_8_seed_396.txt  Exercise_8_seed_407.txt  Exercise_8_seed_418.txt  Exercise_8_seed_429.txt  Exercise_8_seed_44.txt  Exercise_8_seed_440.txt  Exercise_8_seed_451.txt  (+53 more)
Project 2/Data/Exercise_9/: Exercise_9_seed_0.txt  Exercise_9_seed_1001.txt  Exercise_9_seed_1012.txt  Exercise_9_seed_1023.txt  Exercise_9_seed_1034.txt  Exercise_9_seed_1045.txt  Exercise_9_seed_1056.txt  Exercise_9_seed_1067.txt  Exercise_9_seed_1078.txt  Exercise_9_seed_1089.txt  Exercise_9_seed_11.txt  Exercise_9_seed_110.txt  Exercise_9_seed_121.txt  Exercise_9_seed_132.txt  Exercise_9_seed_143.txt  Exercise_9_seed_154.txt  Exercise_9_seed_165.txt  Exercise_9_seed_176.txt  Exercise_9_seed_187.txt  Exercise_9_seed_198.txt  Exercise_9_seed_209.txt  Exercise_9_seed_22.txt  Exercise_9_seed_220.txt  Exercise_9_seed_231.txt  Exercise_9_seed_242.txt  Exercise_9_seed_264.txt  Exercise_9_seed_297.txt  Exercise_9_seed_308.txt  Exercise_9_seed_33.txt  Exercise_9_seed_330.txt  Exercise_9_seed_341.txt  Exercise_9_seed_352.txt  Exercise_9_seed_363.txt  Exercise_9_seed_374.txt  Exercise_9_seed_385.txt  Exercise_9_seed_396.txt  Exercise_9_seed_407.txt  Exercise_9_seed_418.txt  Exercise_9_seed_429.txt  Exercise_9_seed_44.txt  (+56 more)
Project 2/Data/Extra/: Extra_test.txt  variance_test_seed0.txt  variance_test_seed101115.txt  variance_test_seed1011150.txt  variance_test_seed1022385.txt  variance_test_seed1033620.txt  variance_test_seed1044855.txt  variance_test_seed1056090.txt  variance_test_seed1067325.txt  variance_test_seed1078560.txt  variance_test_seed1089795.txt  variance_test_seed1101030.txt  variance_test_seed1112265.txt  variance_test_seed11235.txt  variance_test_seed112350.txt  variance_test_seed123585.txt  variance_test_seed134820.txt  variance_test_seed146055.txt  variance_test_seed157290.txt  variance_test_seed168525.txt  variance_test_seed179760.txt  variance_test_seed190995.txt  variance_test_seed202230.txt  variance_test_seed213465.txt  variance_test_seed22470.txt  variance_test_seed224700.txt  variance_test_seed235935.txt  variance_test_seed247170.txt  variance_test_seed258405.txt  variance_test_seed269640.txt  variance_test_seed280875.txt  variance_test_seed292110.txt  variance_test_seed303345.txt  variance_test_seed314580.txt  variance_test_seed325815.txt  variance_test_seed33705.txt  variance_test_seed337050.txt  variance_test_seed348285.txt  variance_test_seed359520.txt  variance_test_seed370755.txt  (+61 more)
Project 2/DataVisualization/: Plotting.ipynb  tools.py
Project 2/Include/: HashingWithChaining.hpp  Sketch.hpp  Utilities.cpp  Utilities.hpp
Project 2/include/lib/: HashingWithChaining.hpp  Sketch.hpp  Utilities.hpp
Project 2/src/lib/: CMakeLists.txt  Utilities.cpp
Project 2/src/main/: main.cpp  (+2 more)
Project 2/test/: CMakeLists.txt  functions_test.cpp
Project 2_OLD/: CMakeLists.txt  main.cpp
Project 2_OLD/DataVisualization/: Plotting.ipynb
Project 2_OLD/Include/: Utilities.cpp
(+2567 files in other folders)
